--- a/inst/tutorials/Session6/TiePresence.Rmd
+++ b/inst/tutorials/Session6/TiePresence.Rmd
@@ -33,154 +33,36 @@ pairs_const <- NikitaRocks::pairs_const
 pairs_dyn <- NikitaRocks::pairs_dyn
 
 #load prepared analysis data sets
-utterances <- NikitaRocks::utterances
+events_playmates <- NikitaRocks::events_playmates
+events_statements <- NikitaRocks::events_statements
+net_friends <- NikitaRocks::net_friends
+net_playmates <- NikitaRocks::net_playmates
+net_statements <- NikitaRocks::net_statements
+nodes_pupils <- NikitaRocks::nodes_pupils
+#load prepared analysis results
+model_playmate_start <- NikitaRocks::model_playmate_start
+model_statement_choice <- NikitaRocks::model_statement_choice
+model_statement_rate <- NikitaRocks::model_statement_rate
+model_statement_REM <- NikitaRocks::model_statement_REM
 
-# Create the data sets for predicting statements and playmate ties with the
-# goldfish package.
+# Define the dependent events for predicting statement start.
+# The goldfish::estimate() function doesn't find the events created in the
+# learnr tutorial.
+events_dependent <- defineDependentEvents(
+  events = events_statements[events_statements$increment == 1,], #the event list that should be considered as a dependent variable in models: we only analyze statement starts
+  nodes = nodes_pupils, #data frame or a nodes.goldfish object containing the nodes used in the event list
+  defaultNetwork = net_statements #name of a goldfish network object
+)
 
-# Step 1: The node set and time-constant node characteristics or starting values for time-varying node characteristics.
-# - Nodes are identified by textual labels (required). 
-# - variable 'present' (required) indicates if a pupil was already present at
-#   the first time point.
-# - Add time-constant node characteristics or starting values for time-varying
-#   node characteristics (if any). These can be used as attributes in the
-#   construction of predictors.
-# The basic data set pupils_const contains all information.
-nodes_pupils <- pupils_const %>% 
-  #sort by label to ensure the same order in all networks
-  arrange(label) %>%
-  #select relevant variables.
-  select(label, present, sex, ethnicity, adhd)
-# Turn the data frame into a nodes.goldfish data object.
-nodes_pupils <- defineNodes(nodes = nodes_pupils)
-print("Showing data set nodes_pupils:")
-as_tibble(nodes_pupils)
+# Define the dependent events for predicting starting to play together.
+# The goldfish::estimate() function doesn't find the events created in the
+# learnr tutorial.
+events_play_dep <- defineDependentEvents(
+  events = events_playmates[events_playmates$increment == 1,], #the event list that should be considered as a dependent variable in models: we only analyze statement starts
+  nodes = nodes_pupils, #data frame or a nodes.goldfish object containing the nodes used in the event list
+  defaultNetwork = net_playmates #name of a goldfish network object
+)
 
-# Step 2: The changes to node attributes (if any, optional) over time.
-# We do not have time-varying node attributes.
-# If we had, we should ave used the linkEvents() function with arguments
-# changeEvents and attribute.
-
-# Step 3. The static or starting networks. 
-# One network for each type of tie or event. One of these is the
-# dependent/outcome network, all can be used as independent/predictor networks.
-# All networks must have the same nodes as the nodes set and ordered as in the
-# nodes set created in Step 1.
-# - The initially empty directed network of statements.
-net_statements <- defineNetwork(nodes = nodes_pupils, directed = TRUE)
-# - The initially empty undirected network of playmates.
-net_playmates <- defineNetwork(nodes = nodes_pupils, directed = FALSE)
-# - The static undirected network of friendships.
-#   For a static network, create a 0/1 matrix with rows and columns in the same
-#   order as in the list of nodes.
-#   The matrix columns must have the node labels as dimnames, but the rows do
-#   not need to have dimnames.
-friends_matrix <- pairs_const %>%
-  #keep only the sender and receiver
-  select(from, to, friend) %>%
-  #add labels to IDs (so goldfish can match the matrix to the nodes)
-  left_join(pupils_const[,c("ID", "label")], by = c("from" = "ID")) %>%
-  left_join(pupils_const[,c("ID", "label")], by = c("to" = "ID")) %>%
-  #label.x is sender, label.y is receiver: sort to match the nodes
-  arrange(label.x, label.y) %>%
-  #put 'to' values in columns
-  pivot_wider(
-    id_cols = label.x,
-    names_from = label.y, #receiver provides the new columns (variables)
-    values_from = friend, #variable friend indicates 0/1 friendship
-    values_fill = 0, #replace missing values (e.g., on the diagonal) by 0
-    names_sort = TRUE #ensure that the columns are in the correct order
-    ) %>%
-  #drop the from variable (row 1 has ID 1, etc.)
-  select(-label.x) %>%
-  #turn into a matrix
-  as.matrix()
-# create the undirected network of friendships
-net_friends <- defineNetwork(matrix = friends_matrix, nodes = nodes_pupils, directed = FALSE)
-print("Showing data set net_friends:")
-as_tibble(net_friends)
-# Cleanup.
-rm(friends_matrix)
-
-# Step 4. The events that happen to the networks. 
-# Create a list of events for each network, indicating when an event starts or
-# stops. Note: event start and end must become different rows (observations).
-# One of these lists contains the events that we want to predict.
-# Each events list must contain the variables: 
-# - time: POSIXct, integer, or numeric (with decimals), 
-# - sender: character label that occurs in nodes_pupils,
-# - receiver: character label that occurs in nodes_pupils, 
-# - increment: create (1) or dissolve (-1) event (numeric). Instead of
-#   increment: replace, which updates the value of an attribute or tie (pair)?
-
-# A. statement events
-events_statements <- pairs_dyn %>%
-  #select utterances in Break 1
-  filter(dyntie == "Utterance" & breakID == 1) %>%
-  #add labels to IDs (so goldfish can match the matrix to the nodes)
-  left_join(pupils_const[,c("ID", "label")], by = c("from" = "ID")) %>%
-  left_join(pupils_const[,c("ID", "label")], by = c("to" = "ID")) %>%
-  #rename onset and terminus
-  rename(
-    onset.time = onset,
-    terminus.time = terminus
-  ) %>%
-  #stack onset and terminus
-  pivot_longer(
-    cols = onset.time:terminus.censored,
-    names_to = c("type", ".value"),
-    names_sep = "\\.",
-    values_drop_na = TRUE
-  ) %>%
-  #filter out censored end times (in case we want to predict end times)
-  filter(!censored | type == "onset") %>%
-  #recode increment into 1 for onset and -1 for terminus
-  mutate(increment = ifelse(type == "onset", 1, -1)) %>%
-  #select and rename relevant variables
-  select(time, sender = label.x, receiver = label.y, increment) %>%
-  #order by time
-  arrange(time) %>%
-  #a tibble throws a warning (in tutorial): Unknown or uninitialised column: `replace`.
-  as.data.frame()
-# link events to the network
-net_statements <- linkEvents(x = net_statements, changeEvents = events_statements, nodes = nodes_pupils)
-print("Showing data set events_statements:")
-as_tibble(events_statements)
-
-# B. playmate events
-events_playmates <- pairs_dyn %>%
-  #select playmate cases in Break 1 and only one row for each pair (undirected data)
-  filter(dyntie == "Playmate" & breakID == 1 & from < to) %>%
-  #add labels to IDs (so goldfish can match the matrix to the nodes)
-  left_join(pupils_const[,c("ID", "label")], by = c("from" = "ID")) %>%
-  left_join(pupils_const[,c("ID", "label")], by = c("to" = "ID")) %>%
-  #rename onset and terminus
-  rename(
-    onset.time = onset,
-    terminus.time = terminus
-  ) %>%
-  #stack onset and terminus
-  pivot_longer(
-    cols = onset.time:terminus.censored,
-    names_to = c("type", ".value"),
-    names_sep = "\\.",
-    values_drop_na = TRUE
-  ) %>%
-  #filter out censored end times (there aren't any)
-  filter(!censored | type == "onset") %>%
-  #recode increment into 1 for onset and -1 for terminus
-  mutate(increment = ifelse(
-    type == "onset", 1, -1
-  )) %>%
-  #select and rename relevant variables
-  select(time, sender = label.x, receiver = label.y, increment) %>%
-  #order by time
-  arrange(time) %>% #a tibble throws a warning (in tutorial): Unknown or uninitialised column: `replace`.
-  as.data.frame()
-# link events to the network
-net_playmates <- linkEvents(x = net_playmates, changeEvents = events_playmates, nodes = nodes_pupils)
-print("Showing data set events_playmates:")
-as_tibble(events_playmates)
 ```
 
 <!-- Define programming tip style -->
@@ -202,7 +84,7 @@ as_tibble(events_playmates)
 
 In the preceding sessions, we have tried to predict a characteristic of a tie, namely, whether a statement from one pupil to another was positive or negative. 
 
-we have assumed but not predicted that the ties (statements) exist. In the current session, we try to predict the presence versus absence of ties. Can we predict that a pupil says something to another pupil or starts playing with another pupil at a particular moment?
+we have assumed but not predicted that the ties (statements) exist. In the current session, we try to predict the presence versus absence of ties, more exactly, the events that ties appear (or disappear). Can we predict that a pupil says something to another pupil or starts playing with another pupil at a particular moment?
 
 Basically, we are addressing network change: Can we predict how the structure of a network changes?
 
@@ -423,14 +305,14 @@ The prediction problem consists of two steps and models:
 1. Predict who will act: the rate model. Actually, how often or how soon pupils act.
 2. Predict towards whom will be acted: the (receiver) choice model.
 
-Note that there is a third step, namely predicting the characteristics of a tie once we know who will send and receive the tie. We discussed this step in Session 5 (predicting tie valence).
+Note that there is a third step, namely predicting the characteristics of an action (such as maintaining a tie) once we know who will send and receive the action. We discussed this step in Session 5 (predicting tie valence).
 
 ## Install the `goldfish` package
 
-We use the `goldfish` package to estimate models for predicting tie creation.
+We use the `goldfish` package to estimate models for predicting interactions or tie creation/dissolution.
 
-```{r installGoldfish, exercise = TRUE}
-# Use this command to install the goldfish package from github.
+```{r installGoldfish, eval=FALSE, echo=TRUE}
+# COPY THIS COMMANDS TO THE RStudio CONSOLE AND RUN IT THERE. This will install the goldfish package from github.
 remotes::install_github("snlab-ch/goldfish")
 # Note: this requires the remotes package, which should be installed
 # automatically when you install the NikitaRocks package.
@@ -439,9 +321,16 @@ remotes::install_github("snlab-ch/goldfish")
 <div class="question">
 Exercises
 
-1. Run the above code to install the `goldfish` package.
+1. Run the above code in the RStudio console to install the `goldfish` package.
 
-2. Replace the code by `?goldfish` and run this (should open new browser window with general info on the package), to check that installation was successful.
+```{r loadGoldfish, exercise = TRUE}
+# Load the goldfish package.
+library(goldfish)
+# And check correct installation and loading.
+?goldfishEffects
+```
+
+2. Run the above code. This should open new browser window with general info on the package.
 </div>
 
 For installation problems (particularly on Mac OSX), consult https://github.com/snlab-ch/goldfish (https://github.com/snlab-ch/goldfish#installing-openmp-on-mac-osx).
@@ -489,28 +378,29 @@ Exercises
 
 ### 
 
-Some important additional arguments for predictor construction:
+Arguments for predictor construction:
 
-* `window`: Allows the user to set the length of the preceding <i class="question">time window</i> within which network ties/events are used to calculate the predictor. By default, all preceding ties or events are used (`Inf` for infinity).
-* `weighted`: If set to `TRUE`, only checks the presence of the searched tie/event(s) (1 = Yes, 0 = No). If `FALSE` (default), counts the searched tie/event(s).
-* `isTwoMode`: For some effects, th euser must specify whether the network is two-mode (`isTwoMode = TRUE`) or one-mode (`isTwoMode = FALSE`, default). 
+* `isTwoMode`: For some effects, we must specify whether the network is two-mode (`isTwoMode = TRUE`) or one-mode (`isTwoMode = FALSE`, default). 
+* `weighted`: If set to `TRUE`, only checks the presence of the searched tie/interaction(s) (1 = Yes, 0 = No). If `FALSE` (default), counts the searched tie/interaction(s).
+* `window`: Allows the user to set the length of the preceding <i class="question">time window</i> within which network ties/interactions are used to calculate the predictor. By default, all preceding ties or interactions are used (`Inf` for infinity).
+* `ignoreRep`: If an actor sends more than one tie/interaction to a receiver within the time window, take into account only the first tie/interaction (`ignoreRep = TRUE`) or all ties/interactions (`ignoreRep = FALSE`, default)
 
-## Data preparation for the `goldfish` package
+## Data preparation
 
-Before we can estimate a model, we must create data objects in several steps:
+Before we can estimate a model with the `goldfish` package, we must create data objects in several steps:
 
 1. The node set and time-constant node characteristics or starting values for time-varying node characteristics. 
 2. The changes to node attributes (if any, optional) over time.
-3. The static or starting networks. One network for each type of tie or event. One of these is the dependent/outcome network, all can be used as independent/predictor networks. All networks must have the same nodes as the nodes set and ordered as in the nodes set.
+3. The static or starting networks. One network for each type of tie or interaction. One of these is the dependent/outcome network, all can be used as independent/predictor networks. All networks must have the same nodes as the nodes set and ordered as in the nodes set.
 4. The events that happen to the networks. Create a list of events for each network, indicating when an event starts or stops. One of these lists contains the events that we want to predict.
 
 The steps are explained in _Appendix: Data preparation_. As a result of these steps, we have:
 
-1. A list of events that we want to predict: `events_statements`.
+1. A list of events that we want to predict: `events_dependent`.
 2. One or more networks that we can use to construct independent/predictor variables (see the previous topic): 
     + `net_friends`: static friendship relations amng pupils; 
     + `net_playmates`: network of playmates at time 0 linked to `events_playmates`; 
-    +`net_statements`: network of statements at time 0 linked to `events_statements`.
+    + `net_statements`: network of statements at time 0 linked to `events_statements`.
 3. A node list that may contain node characteristics, which can be used as attributes to construct independent/predictor variables (see the previous topic): `nodes_pupils` containing attributes `sex`, `ethnicity`, and `adhd`.
 
 ```{r inspect1, exercise = TRUE}
@@ -526,31 +416,32 @@ Exercise
     + Pay attention of the order of pupils in different data sets. What do you notice?
 </div>
 
-## Estimation with the `goldfish` package
+## Estimating the (sender) rate model
 
 In Dynamic Network Actor Models (DyNAMs), the two models are estimated separately. 
 
 Let us first estimate the rate model: Can we predict the speed at which pupils make statements?
 
-We can only use characteristics of the sending pupils to predict their statement speed (see the table in Topic <i class="question">Build-in types of predictors</i>): 
+We can only use characteristics of the sending pupils to predict their statement speed (see the table in Topic <i class="question">Build-in types of predictors</i>):
 
 * Sender effects (`ego(attribute)`); 
-* Sender's popularity (`indeg(network, isTwoMode)`) and activity (`outdeg(network, isTwoMode)`);
-* embeddedness in transitive fragments (`node_trans(network, isTwoMode)`);
-* connection to 'rich' neighbours (`tertius(network, attribute, isTwoMode)`);
-* connection to similar neighbours (`tertius_diff(network, attribute, isTwoMode)`).
+* Sender's popularity (`indeg(network, isTwoMode = FALSE, weighted = FALSE, window = Inf, ignoreRep = FALSE)`) and activity (`outdeg(network, isTwoMode = FALSE, weighted = FALSE, window = Inf, ignoreRep = FALSE)`);
+* embeddedness in transitive fragments (`node_trans(network, isTwoMode = FALSE, window = Inf, ignoreRep = FALSE)`);
+* connection to 'rich' neighbours (`tertius(network, attribute, isTwoMode = FALSE, weighted = FALSE, window = Inf, ignoreRep = FALSE)`);
+* connection to similar neighbours (`tertius_diff(network, attribute, isTwoMode = FALSE, weighted = FALSE, window = Inf, ignoreRep = FALSE)`).
 
-```{r ratemodel1, exercise = TRUE}
+```{r ratemodel1, exercise = TRUE, exercise.timelimit = 180}
 # Estimate the rate at which pupils make statements.
 # Step 1: Define the dependent events
 events_dependent <- defineDependentEvents(
-  events = events_statements[events_statements$increment == 1,], #the event list that should be considered as a dependent variable in models: only statement starts
+  events = events_statements[events_statements$increment == 1,], #the event list that should be considered as a dependent variable in models: we only analyze statement starts
   nodes = nodes_pupils, #data frame or a nodes.goldfish object containing the nodes used in the event list
   defaultNetwork = net_statements #name of a goldfish network object
 )
+# NOTE: Within the tutorial, changes to the code of Step 1 are ignored.
 # Step 2: Estimate the rate model.
 model_statement_rate <- estimate(
-  events_dependent ~
+  events_dependent ~ 1 + #an intercept is not automatically added!
     ego(nodes_pupils$sex) + 
     ego(nodes_pupils$adhd) + 
     indeg(net_statements, isTwoMode = FALSE, weighted = TRUE, window = 3) +
@@ -563,48 +454,247 @@ summary(model_statement_rate)
 <div class="question">
 Exercises
 
-1. 
+1. Inspect the code of Step 2. Which effects are estimated and what do the arguments mean?
+
+2. Run the code (may take some time; alternative: only run the summary() function) and inspect the output (in the last output box). Interpret the signs (directions) of the coefficients: What speeds up making statements and what slows it down?
+
+3. Estimate some more models, adding/removing effects and changing arguments.
 </div>
 
-{plus results interpretation; no predict() of confint() functions available}
+### Interpreting results
 
-Poisson model; (inverse) waiting time (rate function: speed): positive effects speed up, increase the probability of acting
+Unfortunately, the `goldfish` package does not have `confint() ` or `predict()` functions (at the moment of writing this tutorial). 
 
-### Estimate the (receiver) choice model
+For our confidence in the sign (direction) of effects, we can use the stars printed next to the `Pr(>|z|)` column in the results output. If there is at least one star, we are (95%) confident of the sign of the effect.
+
+In general we can say that:
+
+* A positive effect 'speeds up' making statements, hence reduces the predicted waiting time between a pupil's statements;
+* A negative effect 'slows down' making statements, hence increases the predicted waiting time between a pupil's statements;
+
+The size of effects are not easy to interpret. If you are eager to know, study the next subtopic. Otherwise, skip it.
+
+### Effect size details (only for enthusiasts)
+
+The model (for the curious: a Poisson regression model) predicts the logarithm of the rate at which pupils make statements.
+
+We must exponentiate an effect to get the predicted percentage change in the rate (for a 1 unit increase in the predictor).
+
+```{r interpretrate1, exercise = TRUE}
+# For the original rate model:
+print("Predicted percentage change in the rate:")
+exp(coef(model_statement_rate))
+# If we take the inverse of the exponentiated effects, we get the predicted
+# percentage change in the waiting time between statements (for a 1 unit
+# increase in the predictor).
+1 / exp(coef(model_statement_rate))
+```
+
+If we take the inverse of the exponentiated effects, we get the predicted percentage change in the waiting time between statements (for a 1 unit increase in the predictor).
+
+```{r interpretrate1, exercise = TRUE}
+# For the original rate model:
+print("Predicted percentage change in the waiting time:")
+1 / exp(coef(model_statement_rate))
+```
+
+Percentage change examples:
+
+* 1.099: a (100 * (1.099 - 1) =) 9.9 percent increase;
+* 0.845: a (100 * (1 - 0.845) =) 15.5 percent decrease.
+
+<div class="question">
+Exercise
+
+1. Interpret the predicted percentage change in the rate and waiting time for the four predictor variables.
+</div>
+
+## Estimating the (receiver) choice model
+
+For predicting the receiver of the tie or interaction, we can use all predictors that include the receiver:
+
+* Receiver effects (`alter(attribute)`);
+* Exact similarity effects (`same(attribute)`);
+* Approximate similarity effects: (`sim(attribute)`);
+* Dissimilarity effects (`diff(attribute)`);
+* Other relation effects (`tie(network, weighted = FALSE, window = Inf, ignoreRep = FALSE)`);
+* Repetition effects (`inertia(network, weighted = FALSE, window = Inf)`);
+* Reciprocity effects (`recip(network, weighted = FALSE, window = Inf, ignoreRep = FALSE)`);
+* Transitivity effects (`trans(network, window = Inf, ignoreRep = FALSE)`); 
+* Transitivity via two relations effects (`mixedTrans(list(network1, network2), window = Inf, ignoreRep = FALSE)`); 
+* Four cycle effects (`four(network, isTwoMode = FALSE, window = Inf, ignoreRep = FALSE)`); 
+* Popularity (indegree) effects (`indeg(network, isTwoMode = FALSE, weighted = FALSE, window = Inf, ignoreRep = FALSE)`); 
+* Activity (outdegree) effects (`outdeg(network, isTwoMode = FALSE, weighted = FALSE, window = Inf, ignoreRep = FALSE)`);
+* Connection to 'rich' neighbours effects (`tertius(network, attribute, isTwoMode = FALSE, weighted = FALSE, window = Inf, ignoreRep = FALSE)`);
+* Connection to similar neighbours effects (`tertius_diff(network, attribute, isTwoMode = FALSE, weighted = FALSE, window = Inf, ignoreRep = FALSE)`).
+
+```{r choicemodel1, exercise = TRUE, exercise.timelimit = 180}
+# Estimate the receiver of the statements that pupils make.
+# Step 1: Define the dependent events. Same as rate model (see there).
+# Step 2: Estimate the choice model.
+model_statement_choice <- estimate(
+  events_dependent ~ #do not use an intercept in a choice model!
+    sim(nodes_pupils$adhd) + 
+    tie(net_playmates, weighted = FALSE, window = 1, ignoreRep = TRUE) +
+    recip(net_statements, weighted = TRUE, window = 3, ignoreRep = FALSE),
+    model = "DyNAM", subModel = "choice" #select the choice submodel
+  )
+summary(model_statement_choice)
+```
 
 <div class="question">
 Exercises
 
-1. 
+1. Inspect the code of Step 2. Which effects are estimated and what do the arguments mean?
+
+2. Run the code (may take some time; alternative: only run the summary() function) and inspect the output (in the last output box). Interpret the signs (directions) of the coefficients: What increases the probability that a pupil is selected as statement target, what decreases it?
+
+3. Estimate some more models, adding/removing effects and changing arguments.
 </div>
 
-{plus results interpretation}
+### Interpreting results
 
-### Relational Events Model
+As with the results of the rate model, we can base our confidence of the sign (direction) of effects on the statistical significance of results (stars to the `Pr(>|z|)` column in the results output).
 
-In Relational Events Models (REMs), the rate and choice models are estimated at the same time.
+Generally speaking, a positive effect increases the chance that a pupil is selected as statement target, whereas a negative effect decreases it. The particulars are for enthusiasts only (next subtopic).
+
+### Effect size details (only for enthusiasts)
+
+The model (for the curious: a multinomial regression model) predicts the log odds of the probability that a pupil is selected as statement target, just like a logistic regression model.
+
+We can get the predicted odds (relative probability of being selected as statement target, that is, predicted probability of being selected over not being selected) by exponentiating the regression coefficients. 
+
+The resulting value tells how much more likely pupils are the statement target if they score one unit higher on the predictor variable (with all other predictors at zero).
+
+```{r interpretrate2, exercise = TRUE}
+# For the original choice model: 
+exp(coef(model_statement_choice))
+```
+
+For example, pupils who are one unit more similar to the speaker (sender) are around `r round(exp(coef(model_statement_choice)[[1]]))` more likely to be selected as target (if they are not playmate of the speaker and did not make statements to the speaker in the preceding 3 minutes).
+
+This looks like an incredibly large effect. Unfortunately, we do not know the scale of the similarity variable. Perhaps one unit represents an unrealistically huge change in the similarity score.
+
+<div class="question">
+Exercise
+
+1. Run the code and interpret the results for the other effects.
+</div>
+
+## Relational Events Model
+
+Relational Events Modes (REMs) offer an alternative (and precursor) to the separate estimation of rate and choice models. In a REM, both models are estimated at the same time.
+
+A REM evaluates all possible arrows that may appear at a time point. It predicts which of these is most likely to appear given the state of the network: previous arrows (for example, statements), other relations (for example, friendship, playmates), speaker and target characteristics, and (dis)similarities between these.
+
+As a consequence, we can use all types of effects from the `goldfish` package. For effects that may address the sender and receiver, we must use the `type = "ego"` or `type = "alter"` argument to clarify which of the two we mean:
+
+* popularity (indegree): `indeg(network, isTwoMode = FALSE, weighted = FALSE, window = Inf, ignoreRep = FALSE, type = c("alter", "ego"))`;
+* activity (outdegree): `outdeg(network, isTwoMode = FALSE, weighted = FALSE, window = Inf, ignoreRep = FALSE, type = c("alter", "ego"))`;
+* embeddedness: `node_trans(network, isTwoMode = FALSE, window = Inf, ignoreRep = FALSE, type = c("alter", "ego"))`.
+
+We can estimate REMs with the `goldfish` package (as well as with the `relevent` package).
+
+```{r rem, exercise = TRUE, exercise.timelimit = 300}
+# Estimate the receiver of the statements that pupils make.
+# NOTE: ESTIMATION MAY TAKE QUITE SOME TIME.
+# Step 1: Define the dependent events. Same as the rate model (see there).
+# Step 2: Estimate the choice model.
+model_statement_REM <- estimate(
+  events_dependent ~ 1 + #an intercept is not automatically added!
+    ego(nodes_pupils$sex) + 
+    ego(nodes_pupils$adhd) + 
+    indeg(net_statements, isTwoMode = FALSE, weighted = TRUE, window = 3, type = "ego") +
+    sim(nodes_pupils$adhd) + 
+    tie(net_playmates, weighted = FALSE, window = 1, ignoreRep = TRUE) +
+    recip(net_statements, weighted = TRUE, window = 3, ignoreRep = FALSE),
+    model = "REM", subModel = "choice" #select the REM model and choice submodel
+  )
+summary(model_statement_REM)
+```
 
 <div class="question">
 Exercises
 
-1. 
+1. A DyNAM model uses reciprocity to model only the statement target, not the speaker. In contrast, a REM uses reciprocity both to select the speaker and target. Which model is intuitively more plausible to you?
+2. Run the code (if your computer is not too slow; alternative: only run the summary() function) and interpret the sign of the coefficients as increasing or decreasing the probability of a statement.
 </div>
 
-### Playmate coordination
+## Playmate coordination
+
+The rate and choice models can only predict directed ties and interactions, where we can distinguish between sender and receiver.
+
+In contrast, our playmate ties are undirected. We simply do not know who initiated the playmate tie ("Do you want to play with me?") and who accepted the invitation ("Yes, let's play together!").
+
+The `goldfish` package offers a choice-coordination sub-model to analyze the change of undirected ties and interactions over time. It assumes that both actors involved decide whether or not to participate in the tie or interaction.
+
+This model can handle all types of effects that are available in the package. It predicts which tie/interaction is started or ended (given that a tie/interaction has started or ended).
+
+The effects are interpreted in the same way as in a DyNAM choice model.
+
+```{r coordinationmodel1, exercise = TRUE}
+# Estimate the probability (log odds) that two pupils start to play together.
+# Step 1: Define the dependent events
+events_play_dep <- defineDependentEvents(
+  events = events_playmates[events_playmates$increment == 1,], #the event list that should be considered as a dependent variable in the model
+  nodes = nodes_pupils, #data frame or a nodes.goldfish object containing the nodes used in the event list
+  defaultNetwork = net_playmates #name of a goldfish network object
+)
+# NOTE: Within the tutorial, changes to the code of Step 1 are ignored.
+# Step 2: Estimate the coordination model.
+model_playmate_start <- estimate(
+  events_play_dep ~ #do not use an intercept in a choice (coordination) model!
+      same(nodes_pupils$sex) + 
+      same(nodes_pupils$ethnicity) + 
+      sim(nodes_pupils$adhd) + 
+      tie(net_friends) + #friendship is static: don't use the 'window' argument
+      indeg(net_playmates, isTwoMode = FALSE, weighted = TRUE, window = 3, type = "alter") + 
+      trans(net_playmates, window = 3, ignoreRep = TRUE), 
+    model = "DyNAM", subModel = "choice_coordination" #note the submodel
+  )
+summary(model_playmate_start)
+```
 
 <div class="question">
 Exercises
 
-1. 
+1. Inspect the code of Step 2. Which effects are estimated and what do the arguments mean?
+
+2. Run the code (may take some time; alternative: only run the summary() function) and inspect the output (in the last output box). Interpret the signs (directions) of the coefficients: What increases the probability that two pupils tart playing together, what decreases the probability?
+
+3. Estimate some more models, adding/removing effects and changing arguments.
 </div>
 
 ## `RSiena` for panel wave data
 
+The models presented in the preceding topics all require data on events with more or less precise information on start and end times.
+
+If the data is collected in panel waves, similar types of models can be estimated with the `RSiena` package.
+
+`RSiena` uses the same logic and types of predictors as the DyNAM rate and choice models. It treats the events of tie or interaction starts and endings in between panel waves as missing data. The missing data are guessed by simulating the process of events in between panel waves.
+
+Because of the guessing, `RSiena` requires that the ties do not change too much between subsequent panel waves. A substantial proportion of ties that exist in the a panel wave must still exist in the next. 
+
+If the ties for which we want to predict change are durable in comparison to the time span between measurement waves, you can analyze the typs of effects learned here with the `RSiena` package.
+
 ## Conclusion
 
+We have learned:
+
+* What types of effects are used to predict network evolution;
+* Which research questions can be answered by tests of these effects;
+* How to estimate the effects with different models;
+* How to globally interpret the results.
+
+This concludes the tutorials on analyzing events within networks.
 
 ## Further Reading
 
+- An explanation and example application of the rate and choice models can be found in: Stadtfeld, C., & Block, P. (2017). Interactions, Actors, and Time: Dynamic Network Actor Models for Relational Events. _Sociological Science_, 4, 318–352. https://doi.org/10.15195/v4.a14.
+- Coordination models are introduced and applied in: Stadtfeld, C., Hollway, J., & Block, P. (2017). Dynamic Network Actor Models: Investigating Coordination Ties through Time. _Sociological Methodology_, 47(1), 1–40. https://doi.org/10.1177/0081175017709295.
+- The seminal paper on relational events models: Butts, C. T. (2008). A relational event framework for social action. _Sociological Methodology_, 38(1), 155–200.
+- An extensive manual for the `RSiena` package can be found at http://www.stats.ox.ac.uk/~snijders/siena/RSiena_Manual.pdf.
+- An alternative approach based on event history models is offered in: de Nooy, W. (2011). Networks of action and events over time. A multilevel discrete-time event history model for longitudinal network data. _Social Networks_, 33(1), 31–40. https://doi.org/10.1016/j.socnet.2010.09.003.
 
 ## Appendix: Data preparation
 
